update the api, add to the owner endpoint
